# QuantAgents

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: bias_detection.yml  data_pipeline.yml  deploy.yml  model_training.yml  tests.yml
airflow/dags/: monthly_retrain.py
backend/: alembic.ini  config.py  main.py  pyproject.toml
backend/api/: analyze.py  health.py  mock_trade.py  trade.py  ws_analyze.py
backend/db/: __init__.py  base.py  models.py
backend/mcp_servers/: alpaca_trading.py  alpha_vantage.py  backtest.py  crawl4ai_server.py  options_mcp.py  python_executor.py  quantum_finance.py  sec_edgar.py  tavily_news.py  trade_journal.py  yahoo_finance.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/ml/: __init__.py  data_generator.py  model_analysis.py  model_registry.py  train_models.py
backend/orchestrator/: graph.py  graph_v2.py  graph_v3.py  graph_v4.py  graph_v5.py  nodes.py  nodes_phase4.py  nodes_phase5.py  nodes_phase6.py  nodes_phase7.py  prompts.py  state.py
backend/scripts/: validate_quantum.py
backend/services/: options_strategy.py  position_sizing.py
backend/tests/: test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py  test_placeholder.py
data-pipeline/dags/: daily_market_data.py  test_dag.py
data-pipeline/scripts/: detect_anomalies.py  fetch_filings.py  fetch_news.py  fetch_options.py  fetch_prices.py  preprocess.py  validate_schema.py
data-pipeline/tests/: test_pipeline.py
docs/: flow.md  stack.md  ui-ux-design-system.md
docs/agents/: backtest_engine.md  market_researcher.md  options_analyst.md  portfolio_strategist.md  quantum_optimizer.md  risk_assessor.md  technical_analyst.md  trade_executor.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/analyze/: page.tsx
frontend/app/(app)/backtest/: page.tsx
frontend/app/(app)/mock-trading/: page.tsx
frontend/app/(app)/observability/: page.tsx
frontend/app/(app)/portfolio/: page.tsx
frontend/app/(app)/trading/: page.tsx
frontend/app/(app)/watchlist/: page.tsx
frontend/app/(marketing)/: page.tsx
frontend/app/analyze/: page.tsx
frontend/app/backtest/: page.tsx
frontend/app/mock-trading/: page.tsx
frontend/app/observability/: page.tsx
frontend/app/portfolio/: page.tsx
frontend/app/trading/: page.tsx
frontend/app/watchlist/: page.tsx
frontend/components/: AgentCard.tsx  Sidebar.tsx
frontend/components/sandbox/: TradingTerminal.tsx  VirtualPortfolio.tsx
frontend/hooks/: useAgentStream.ts
infra/: Dockerfile.backend  Dockerfile.pipeline  init-multiple-dbs.sh
