[project]
name = "quantagents"
version = "0.1.0"
description = "Multi-Agent Trading Intelligence Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # ── Web framework ──────────────────────────────────────────
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    # ── Agent orchestration ────────────────────────────────────
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "openai>=1.35.0",
    # ── MCP ───────────────────────────────────────────────────
    "mcp>=1.0.0",
    # ── Database ──────────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # ── Cache & Vector DB ─────────────────────────────────────
    "redis[hiredis]>=5.0.0",
    "qdrant-client>=1.9.0",
    # ── Observability ─────────────────────────────────────────
    "langfuse>=2.0.0",
    # ── Config ────────────────────────────────────────────────
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    # ── Data ──────────────────────────────────────────────────
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "requests>=2.32.0",
    # ── Broker ────────────────────────────────────────────────
    "alpaca-py>=0.26.0",
    # ── Backtesting ───────────────────────────────────────────
    "vectorbt>=0.26.0",
    # ── Quantum ───────────────────────────────────────────────
    "qiskit>=1.1.0",
    "qiskit-aer>=0.14.0",
    "qiskit-finance>=0.4.0",
    "qiskit-optimization>=0.6.0",
    "qiskit-algorithms>=0.3.0",
    # ── ML ────────────────────────────────────────────────────
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.3.0",
    "optuna>=3.6.0",
    "shap>=0.45.0",
    "lime>=0.2.0.1",
    "fairlearn>=0.10.0",
    "mlflow>=2.13.0",
    # ── Web scraping ──────────────────────────────────────────
    "crawl4ai>=0.3.0",
    "tavily-python>=0.3.0",
    # ── Utilities ─────────────────────────────────────────────
    "scipy>=1.13.0",
    "pyarrow>=16.0.0",
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",   # for TestClient
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
